--- a/test/curve.html
+++ b/test/curve.html
@@ -25,7 +25,6 @@
       let webAudioWave = new WebAudioWave('curve', audio, {
         frameRate: 60,
         fftSize: 512,
-        // pow: 2,
         svgWidth: '1200px',
         height: '800px',
         viewBoxWidth: 1200,
@@ -33,16 +32,12 @@
       })
       document.body.append(webAudioWave.svg)
       webAudioWave.config({
-        style: 'bezier',
         color: 'skyblue',
-        reverse: true
-        // gradientColor: ['#ff00ff', '#ff0000'],
-        // gradientNumber: 100,
-        // gap: 1,
-        // mirrorX: true,
-        // mirrorY: true
-        // reverseX: true,
-        // reverseY: true
+        gradientColor: ['#0000ff', '#ff0000'],
+        gradientNumber: 100,
+        gradientType: 'frequency',
+        reverse: true,
+        width: 2
       })
 
       audio.addEventListener('play', () => {
