--- a/test/curve.html
+++ b/test/curve.html
@@ -33,10 +33,9 @@
       document.body.append(webAudioWave.svg)
       webAudioWave.config({
         color: 'skyblue',
-        gradientColor: ['#0000ff', '#ff0000'],
+        gradientColor: ['#aaccdd', '#ff0000'],
         gradientNumber: 100,
         gradientType: 'frequency',
-        reverse: true,
         strokeWidth: 2
       })
 
