--- a/test/bar.html
+++ b/test/bar.html
@@ -23,10 +23,10 @@
       let audio = document.querySelector('#example')
 
       let webAudioWave = new WebAudioWave('bar', audio, {
-        frameRate: 60,
-        fftSize: 128,
+        rate: 60,
+        size: 128,
         pow: 2,
-        svgWidth: '1200px',
+        width: '1200px',
         height: '800px',
         viewBoxWidth: 1200,
         viewBoxHeight: 800
