--- a/test/curve.html
+++ b/test/curve.html
@@ -23,9 +23,9 @@
       let audio = document.querySelector('#example')
 
       let webAudioWave = new WebAudioWave('curve', audio, {
-        frameRate: 60,
-        fftSize: 512,
-        svgWidth: '1200px',
+        rate: 60,
+        size: 512,
+        width: '1200px',
         height: '800px',
         viewBoxWidth: 1200,
         viewBoxHeight: 800
