--- a/test/bar.html
+++ b/test/bar.html
@@ -41,8 +41,7 @@
         mirrorX: true,
         reverseY: true,
         mirrorY: true,
-        gradientColor: ['#00ffff', '#ff00f0'],
-        gradientNumber: 100
+        dynamicColor: ['#00ffff', '#ff00f0']
       })
 
       audio.addEventListener('play', () => {
