--- a/test/curve.html
+++ b/test/curve.html
@@ -6,42 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curve</title>
 
-    <script src="../node_modules/d3/dist/d3.js"></script>
-    <script src="../dist/index.browser.js"></script>
     <style>
-      svg {
-        border: 1px solid gray;
+      body {
+        overflow: hidden;
+        margin: 0;
+      }
+      audio {
+        position: fixed;
+        right: 0;
+        bottom: 0;
       }
     </style>
-  </head>
-  <body>
-    <div>
-      <audio id="example" src="./audio/come-sweet-death.mp3" controls />
-    </div>
-
+    <script src="../dist/index.iife.js"></script>
+    <script src="./scripts/index.js"></script>
     <script>
-      let audio = document.querySelector('#example')
-
-      let webAudioWave = new WebAudioWave('curve', audio, {
-        rate: 60,
-        size: 512,
-        width: '1200px',
-        height: '800px',
-        viewBoxWidth: 1200,
-        viewBoxHeight: 800
-      })
-      document.body.append(webAudioWave.svg)
-      webAudioWave.config({
-        color: 'skyblue',
-        gradientColor: ['#aaccdd', '#ff0000'],
-        gradientNumber: 100,
-        gradientType: 'frequency',
-        strokeWidth: 2
-      })
-
-      audio.addEventListener('play', () => {
-        webAudioWave.play()
+      document.addEventListener('DOMContentLoaded', () => {
+        initiate(
+          'curve',
+          { size: 512 },
+          {
+            width: 2,
+            mirror: true,
+            reverse: true,
+            gradientColor: ['#00ffff', '#ff00f0']
+          }
+        )
       })
     </script>
+  </head>
+  <body>
+    <audio src="./audio/come-sweet-death.mp3" controls />
   </body>
 </html>
