--- a/test/circle.html
+++ b/test/circle.html
@@ -27,8 +27,8 @@
           {
             color: 'blue',
             width: 3,
-            dynamicColor: ['#ff00f0', '#00ffff'],
-            fill: true
+            dynamicColor: ['#ff00f0', '#00ffff']
+            // fill: true
           }
         )
       })
