--- a/test/curve.html
+++ b/test/curve.html
@@ -23,7 +23,7 @@
       document.addEventListener('DOMContentLoaded', () => {
         initiate(
           'curve',
-          { size: 512 },
+          { size: 512, effect: { trace: 0.9 } },
           {
             width: 2,
             mirror: true,
