--- a/test/bar.html
+++ b/test/bar.html
@@ -9,6 +9,9 @@
     <style>
       body {
         overflow: hidden;
+        width: 100vw;
+        height: 100vh;
+        padding: 0;
         margin: 0;
       }
       audio {
