--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <div style="margin-top: 100px; font-size: 24px">Web 音频波形</div>
     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 50px; margin-top: 50px">
       <a class="card" href="./test/bar.html">
-        <img style="width: 200px; height: auto" src="./docs/bar.png" />
+        <img style="width: 200px; height: auto" src="./docs/imgae/bar.png" />
         <div style="margin: 10px auto; text-align: center">柱形</div>
       </a>
       <a class="card" href="./test/curve.html">
-        <img style="width: 200px; height: auto" src="./docs/curve.png" />
+        <img style="width: 200px; height: auto" src="./docs/imgae/curve.png" />
         <div style="margin: 10px auto; text-align: center">曲线</div>
       </a>
       <a class="card" href="./test/circle.html">
-        <img style="width: 200px; height: auto" src="./docs/circle.png" />
+        <img style="width: 200px; height: auto" src="./docs/imgae/circle.png" />
         <div style="margin: 10px auto; text-align: center">圆环</div>
       </a>
     </div>
