--- a/test/curve.html
+++ b/test/curve.html
@@ -28,6 +28,7 @@
             width: 2,
             mirror: true,
             reverse: true,
+            backforth: true,
             gradientColor: ['#00ffff', '#ff00f0']
           }
         )
