--- a/test/curve.html
+++ b/test/curve.html
@@ -29,6 +29,7 @@
             mirror: true,
             reverse: true,
             backforth: true,
+            smooth: true,
             gradientColor: ['#00ffff', '#ff00f0']
           }
         )
