--- a/test/bar.html
+++ b/test/bar.html
@@ -26,10 +26,10 @@
       document.addEventListener('DOMContentLoaded', () => {
         initiate(
           'bar',
-          { size: 128 },
+          { size: 128, db: true },
           {
-            gap: 1,
-            dynamicColor: ['#00ffff', '#ff00f0']
+            dynamicColor: ['#00ffff', '#ff00f0'],
+            gap: 1
           }
         )
       })
