--- a/test/curve.html
+++ b/test/curve.html
@@ -25,12 +25,12 @@
           'curve',
           { size: 512, effect: { trace: 0.9 } },
           {
+            gradientColor: ['#00ffff', '#ff00f0'],
             width: 2,
             mirror: true,
             reverse: true,
             backforth: true,
-            smooth: true,
-            gradientColor: ['#00ffff', '#ff00f0']
+            smooth: true
           }
         )
       })
