--- a/test/ripple.html
+++ b/test/ripple.html
@@ -22,12 +22,10 @@
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         initiate(
-          'circle',
-          { size: 128 },
+          'ripple',
+          { size: 256 },
           {
-            color: 'blue',
-            dynamicColor: ['#ff00f0', '#00ffff'],
-            width: 3
+            color: 'blue'
           }
         )
       })
