--- a/test/ripple.html
+++ b/test/ripple.html
@@ -25,7 +25,11 @@
           'ripple',
           { size: 256 },
           {
-            color: 'blue'
+            color: '#ff00f0',
+            width: 3,
+            period: 120,
+            interval: 30,
+            threshold: 0.3
           }
         )
       })
