--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <img style="width: 200px; height: auto" src="./docs/imgae/circle.png" />
         <div style="margin: 10px auto; text-align: center">圆环</div>
       </a>
+      <a class="card" href="./test/ripple.html">
+        <img style="width: 200px; height: auto" src="./docs/imgae/ripple.png" />
+        <div style="margin: 10px auto; text-align: center">波纹</div>
+      </a>
     </div>
   </body>
 </html>
