--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <div style="margin-top: 100px; font-size: 24px">Web 音频波形</div>
     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 50px; margin-top: 50px">
       <a class="card" href="./test/bar.html">
-        <img style="width: 200px; height: auto" src="./docs/imgae/bar.png" />
+        <img style="width: 200px; height: auto" src="./demo/imgae/bar.png" />
         <div style="margin: 10px auto; text-align: center">柱形</div>
       </a>
       <a class="card" href="./test/curve.html">
-        <img style="width: 200px; height: auto" src="./docs/imgae/curve.png" />
+        <img style="width: 200px; height: auto" src="./demo/imgae/curve.png" />
         <div style="margin: 10px auto; text-align: center">曲线</div>
       </a>
       <a class="card" href="./test/circle.html">
-        <img style="width: 200px; height: auto" src="./docs/imgae/circle.png" />
+        <img style="width: 200px; height: auto" src="./demo/imgae/circle.png" />
         <div style="margin: 10px auto; text-align: center">圆环</div>
       </a>
       <a class="card" href="./test/ripple.html">
-        <img style="width: 200px; height: auto" src="./docs/imgae/ripple.png" />
+        <img style="width: 200px; height: auto" src="./demo/imgae/ripple.png" />
         <div style="margin: 10px auto; text-align: center">波纹</div>
       </a>
     </div>
