--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
   <body style="display: flex; flex-direction: column; align-items: center">
     <div style="margin-top: 100px; font-size: 24px">Web 音频波形</div>
     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 50px; margin-top: 50px">
-      <a class="card" href="./test/bar.html">
+      <a class="card" href="./demo/bar.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/bar.png" />
         <div style="margin: 10px auto; text-align: center">柱形</div>
       </a>
-      <a class="card" href="./test/curve.html">
+      <a class="card" href="./demo/curve.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/curve.png" />
         <div style="margin: 10px auto; text-align: center">曲线</div>
       </a>
-      <a class="card" href="./test/circle.html">
+      <a class="card" href="./demo/circle.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/circle.png" />
         <div style="margin: 10px auto; text-align: center">圆环</div>
       </a>
-      <a class="card" href="./test/ripple.html">
+      <a class="card" href="./demo/ripple.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/ripple.png" />
         <div style="margin: 10px auto; text-align: center">波纹</div>
       </a>
