--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
       </a>
       <a class="card" href="./demo/circle.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/circle.png" />
-        <div style="margin: 10px auto; text-align: center">圆环</div>
+        <div style="margin: 10px auto; text-align: center">圆圈</div>
       </a>
       <a class="card" href="./demo/ripple.html">
         <img style="width: 200px; height: auto" src="./demo/imgae/ripple.png" />
         <div style="margin: 10px auto; text-align: center">波纹</div>
+      </a>
+      <a class="card" href="./demo/round.html">
+        <img style="width: 200px; height: auto" src="./demo/imgae/round.png" />
+        <div style="margin: 10px auto; text-align: center">轮环</div>
       </a>
     </div>
   </body>
