--- a/demo/round.html
+++ b/demo/round.html
@@ -25,10 +25,11 @@
           'round',
           { size: 1024, slice: [0, 800] },
           {
-            dynamicColor: ['#ff00f0', '#00ffff'],
-            width: 1,
+            gradientColor: ['#00ffff', '#ff00f0'],
+            period: 1000,
             amplitude: 100,
-            rotate: -1
+            rotate: -1,
+            baseDynamic: true
           }
         )
       })
